add mouse event

--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.x-label, .y-label {
+  font-size: 12px;
+  letter-spacing: 0.5px;
+  color: #636566;
+}
